--- a/BSSLNCSApi.csproj
+++ b/BSSLNCSApi.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
 <ItemGroup>
+  <PackageReference Include="Microsoft.AspNetCore.Rewrite" Version="2.2.0" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1" />
   <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
   <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
