--- a/BSSLNCSApi.csproj
+++ b/BSSLNCSApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -29,6 +29,7 @@
   </ItemGroup>
 
 <ItemGroup>
+  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.2" />
   <PackageReference Include="Microsoft.AspNetCore.Rewrite" Version="2.2.0" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1" />
   <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
